Add validation for transaction creation, amend swagger spec and add postman.json
